--- a/css/style.css
+++ b/css/style.css
@@ -2408,10 +2408,10 @@ iframe {
 .contact-info span {
     font-weight: bold;
 }
-
+/* 
 .progress-bar-container {
     margin-top: 20px;
-}
+} */
 
 .progress-title {
     font-size: 16px;
@@ -2432,7 +2432,8 @@ iframe {
     background-color: #ffffff;
     height: 70%;
     width: 75%;
-    text-align: center;
+    text-align: end;
+    border-radius: 51px;
     line-height: 20px;
     font-size: 14px;
     font-weight: bold;
@@ -2484,9 +2485,6 @@ iframe {
         gap: 10px; /* Add space between buttons */
     }
 
-    .progress-bar-container {
-        margin-top: 15px;
-    }
 
     .progress-bar {
         max-width: 100%; /* Ensure progress bar fits within the container */
@@ -2516,7 +2514,7 @@ iframe {
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     /* max-width: 1200px; */
-    margin: 20px auto;
+    margin: 0px auto;
   }
   
   /* Image Container */
@@ -2653,7 +2651,7 @@ iframe {
     font-size: 32px;
     font-weight: bold;
     color: #333333;
-    margin-bottom: 20px;
+    margin-bottom: 38px;
   }
   
   .amenities-grid {
@@ -2762,12 +2760,19 @@ iframe {
 }
 
 .project-details ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 1.8;
+    list-style: none; /* Remove default list styles */
+    padding: 0; /* Remove extra padding */
+    margin: 0; /* Remove extra margin */
+    font-size: 14px; /* Set font size */
+    line-height: 1.8; /* Adjust line height */
+    display: flex; /* Use flexbox for alignment */
+    flex-direction: column; /* Stack items vertically */
+    align-items: flex-start; /* Align text to the left */
+    margin-left: 95px;
 }
+  
+  
+ 
 
 /* Responsive Design */
 @media (max-width: 768px) {
@@ -2785,6 +2790,7 @@ iframe {
 @media (max-width: 480px) {
   .project-details ul {
     font-size: 12px;
+    margin-left: 65px;
   }
 
   .project-details h3 {
@@ -2803,9 +2809,7 @@ iframe {
   height: 0;
   padding-bottom: 56.25%; /* Aspect ratio: 16:9 */
   overflow: hidden;
-  border: 2px solid #ccc; /* Optional: Border around the map */
   border-radius: 8px; /* Optional: Rounded corners */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Shadow for better appearance */
   margin: 0; /* Ensures no extra margin outside the container */
 }
 
@@ -2814,9 +2818,14 @@ iframe {
   top: 100px;
   left: 0;
   width: 100%;
-  height: 70%;
+  margin-top: -100px;
+  height: 100%;
   border: 0; /* Removes the default border around the iframe */
 }
+.black{
+    color : #fff
+}
+    
 
 .rohaan{
     color: #ffffff !important;
@@ -2856,7 +2865,7 @@ iframe {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     max-width: 61%;
-    margin: 0 auto; /* Centers the grid horizontally */
+    margin: 35px auto; /* Centers the grid horizontally */
     justify-content: center; /* Ensures grid items are centered */
     align-items: center;
   }
