--- a/css/style.css
+++ b/css/style.css
@@ -3486,3 +3486,45 @@ td {
         font-size: 14px;
     }
 }
+
+
+.form-container1 {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.form-container1 input ,.form-container1 select
+{
+    padding: 10px;
+    width: 200px;
+    background: #d3d3d3;
+    border: none;
+    font-size: 16px;
+}
+
+.form-container1 button {
+    padding: 10px 20px;
+    background: #2196F3;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+/* Mobile Responsive */
+@media (max-width: 768px) {
+    .form-container1 {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .form-container1 input,
+    .form-container1 button,
+    .form-container1 select {
+        width: 100%;
+        max-width: 300px;
+    }
+}
